--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="iamge/x-icon" href="https://icons.iconarchive.com/icons/steve/zondicons/96/Library-icon.png">
   <title>Attendance Portal</title>
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
