--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -16,7 +16,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="navbar-brand" href="/">
-                        <p style="margin-top: 10px; font-size: 20px"><i class="fas fa-camera"></i> Capture It!</p>
+                        <p style="margin-top: 10px; font-size: 20px"> Check Mate 360<i class="fas fa-bolt"></i></p>
                     </a>
                 </li>
                 <li class="nav-item">
